// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Actions Action only 1`] = `
<root
  data-is="my-button"
>
  <button
    class="button"
    style="color: #42b983; border-color: #42b983"
  >
    Click me to log the action!
  </button>
</root>
`;

exports[`Storyshots Addon|Actions Multiple actions 1`] = `
<root
  data-is="my-button"
>
  <button
    class="button"
    style="color: #42b983; border-color: #42b983"
  >
    Double Click me to log the action!
  </button>
</root>
`;
